fixed safari border radius overflow hidden issue

--- a/css/cards.css
+++ b/css/cards.css
@@ -10,6 +10,8 @@
     overflow: hidden;
     border-radius: 30px;
     height: 374px;
+    /* to fix safari border radius overflow hidden issue: */
+    transform: translateZ(0);
 }
 
 .light-mode .card {
@@ -52,6 +54,8 @@
     height: 100%;
     top: 0px;
     left: 0px;
+    /* to fix safari border radius overflow hidden issue: */
+    transform: translateZ(0);
 }
 
 .contact-card-layout {
